ngon update 1h30 9/4